# smart_loader

./: parquet_reader.py  pyproject.toml
smart_loader/: __init__.py  loader.py  parquet_reader.py
