[project]
name = "smart-loader"
version = "0.1.0"
description = "Tiered data loader for Docta services — Redis Tier 1 + S3 Parquet Tier 2"
requires-python = ">=3.11"
dependencies = [
    "redis>=5.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "boto3>=1.34",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["smart_loader*"]
